# voodo-HackAgents-BIU-2026

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
client/executor/: README.md  computer.py  main.py  requirements.txt
client/scripts/: dev_all.ps1  mouse_guide.py  voodo_assistant.py
server/agent/: README.md  agent.py  computer.py  llm.py  mock_llm.py  requirements.txt  tools.py
server/app/: README.md  bridge.py  main.py  mock_agent.py  requirements.txt
server/app/static/: admin.html  app.js  index.html  it.html  style.css
server/db/: README.md  client.py  launch_db.sh  requirements.txt  schema.sql  seed.py
server/docker/: Dockerfile.backend
server/scripts/: dev_all.sh  stop_all.sh
shared/: __init__.py  config.py  protocol.py  security.py
