[project]
name = "voodo"
version = "0.0.1"
description = "AI tech-support agent (computer-use) — hackathon"
requires-python = ">=3.10"
dependencies = [
    "pynput>=1.7.6",
    "pyautogui>=0.9.54",
    "PyQt5>=5.15.9",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
